--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE <!DOCTYPE html>
+<html lang= "en-us">
 <head>
+    <meta charset="utf-8" />
     <title>HW-Wireframe</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        ::before
-        <header>
-            header
-        </header> ==$0
+    <header>
+        <p>HEADER</p>
+    </header>
 
-        <nav>
-            nav
-        </nav> ==$0
+    <nav>
+        <p>NAV</p>
+    </nav>
 
-        <section>
-            section
-            <article>
-                article
-                <div>
-                    <h2>h1,</h2>
-                    <h2>h2,</h2>
-                    <h2>h3</h2>
-                </div>
-                <p>p</p> 
-            </article> 
-        </section> ==$0
+    <section>
+        <heading>
+            <p>SECTION</p>
+        </heading>
 
-        <aside>
-            aside
-        </aside> ==$0
+        <article>
+            <heading>ARTICLE</heading>
+            <h1>H1, H2, H3</h1>
+            <p>P</p>
+        </article>
+    </section>
 
-        <footer>
-            footer
-        </footer> ==$0
-        ::after 
-    </div>
+    <aside>
+        <HEADING>
+            <p>ASIDE</p>
+        </HEADING>
+    </aside>
+
+    <div class="clear"></div>
+
+    <footer>
+        <p>FOOTER</p>
+    </footer>
+    
 </body>
-
 </html>
